article in main developed

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,3 +2,16 @@
     width: 120px;
     height: 45px;
 }
+
+h1 {
+    font-size: 3rem !important;
+}
+
+.bt-shadow {
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.13);
+}
+
+.bt-get {
+    height: 60px;
+    width: 205px;
+}
