--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.bt-login{width:120px;height:45px}/*!
+.bt-login{width:120px;height:45px}h1,.h1{font-size:3rem !important}.bt-shadow{-webkit-box-shadow:0px 4px 5px rgba(0,0,0,0.13);box-shadow:0px 4px 5px rgba(0,0,0,0.13)}.bt-get{height:60px;width:205px}/*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
