--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
-@import "./header";
 $primary: #5265E1;
 $secondary: #FA5959;
+@import "./header";
+@import "./main";
 @import "../node_modules/bootstrap/scss/_functions";
 @import "../node_modules/bootstrap/scss/_variables";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
