--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,6 +1,21 @@
 .bt-login {
-    width: 120px;
-    height: 45px;
+    width: auto;
+    height: auto;
+    box-shadow: none;
+    background-color: transparent;
+    border-radius: none;
+    color: black;
+}
+
+@include media-breakpoint-up(lg) {
+    .bt-login {
+        width: 120px;
+        height: 45px;
+        box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.13);
+        background-color: $secondary;
+        border-radius: 10px;
+        color: white !important;
+    }
 }
 
 h1 {
@@ -19,4 +34,18 @@ h1 {
 .bt-more {
     height: 60px;
     width: 145px;
+}
+
+.filterLogo {
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(100deg) brightness(100%) contrast(100%);
+}
+
+.n-item {
+    border-bottom: 3px solid blue;
+}
+
+@include media-breakpoint-up(lg) {
+    .n-item {
+        border-bottom: none;
+    }
 }
