--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,8 @@
 $primary: #5265E1;
 $secondary: #FA5959;
-@import "./header";
-@import "./main";
+$success: #242946;
 @import "../node_modules/bootstrap/scss/_functions";
 @import "../node_modules/bootstrap/scss/_variables";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "./header";
+@import "./main";
