--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2,3 +2,35 @@
     border-color: transparent transparent $secondary transparent !important;
     border-width: 3px;
 }
+
+.ct-extension {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 282px;
+    height: 368px;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+}
+
+.ct-txt-extension {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50px;
+}
+
+.img-line {
+    position: absolute;
+    bottom: 90px;
+}
+
+.bt-extension {
+    position: absolute;
+    bottom: 20px;
+    height: 45px;
+}
