arrenge input resposive and margins in all document

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,4 @@ $success: #242946;
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 @import "./header";
 @import "./main";
+@import "./footer";
